# one-billion-row-challenge-python

./: README.md
etl-python-excel-aovivo/: pyproject.toml  requirements.txt
etl-python-excel-aovivo/src/etl_python_excel_aovivo/: main.py  output.html
one-billion-row-challenge-python/: README.md  pyproject.toml  requirements.txt
one-billion-row-challenge-python/src/: create_measurements.py  using_pandas.py  using_polars.py  using_python.py  using_python_old.py
