[project]
name = "one-billion-row-challenge-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcelo Vasselai",email = "mvasselai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "dask (>=2025.2.0,<2026.0.0)",
    "duckdb (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "one_billion_row_challenge_python", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
